--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text /html;charset=utf-8">
-    <title>制作的第一个网页</title>
+    <title>html和css的关系</title>
+    <style type="text/css">
+    h1{font-size:12px;}
   </head>
 <body>
 <h1>Hello World</h1>
