--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>html和css的关系</title>
     <style type="text/css">
     h1{font-size:12px;}
+    </style>
   </head>
 <body>
 <h1>Hello World</h1>
