--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta http-equiv="content-type" content="text /html;charset=utf-8">
     <title>html和css的关系</title>
     <style type="text/css">
-    h1{font-size:12px;}
+    h1{font-size:12px;
+      color:#930;
+    }
     </style>
   </head>
 <body>
