--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <body>
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages.</p>
+  <img src="http://i2.pixiv.net/img-original/img/2016/01/20/17/51/48/54813121_p0.jpg">
 </body>
 </html>
