--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages.</p>
-  <img src="http://image01.oneplus.cn/shop/onedayonephoto/682047e8f4ae4661c83720ef84198e7e_1920_0.jpg">
+  <img src="http://i4.pixiv.net/img-original/img/2015/08/21/12/23/40/52102275_p0.jpg">
 </body>
 </html>
