--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages.</p>
-  <img src="http://i4.pixiv.net/img-original/img/2015/08/21/12/23/40/52102275_p0.jpg">
+  <img src="http://d.hiphotos.baidu.com/video/pic/item/622762d0f703918ffebdc5e4523d269759eec4b4.jpg">
 </body>
 </html>
