--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages.</p>
-  <img src="http://imgsrc.baidu.com/forum/w%3D580%3B/sign=13a0c0f5327adab43dd01b4bbbefb11c/279759ee3d6d55fb594205fb69224f4a21a4dd63.jpg">
+  <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
 </body>
 </html>
