--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text /html;charset=utf-8">
-    <title>html和css的关系</title>
+    <title>html和css的关系</title> 
     <style type="text/css">
-     <!--zhushi-->
     h1{font-size:12px;
       color:#930;
       text-align:center;
@@ -12,8 +11,10 @@
     </style>
   </head>
   <body>
+    <!--html-->
       <h1>Hello World</h1>
       <p>I'm hosted with GitHub Pages.</p>
       <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
+    <!--html-->
   </body>
 </html>
