pra sta:body 标签

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   </head>
   <body>
       <h1>Hello World</h1>
-      <!--html-->
-        <p>I'm hosted with GitHub Pages.</p>
-      <!--html-->
+      <p><em>I'm</em> <span>hosted</span> with <strong>GitHub Pages</strong>.</p>
       <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
   </body>
 </html>
