--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta http-equiv="content-type" content="text /html;charset=utf-8">
     <title>html和css的关系</title> 
     <style type="text/css">
+    span{color:blue};
     h1{font-size:12px;
       color:#930;
-      text-align:center;
-       }
+      text-align:center;}
     </style>
   </head>
   <body>
