--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta http-equiv="content-type" content="text /html;charset=utf-8">
     <title>html和css的关系</title> 
     <style type="text/css">
-    span{color:blue};
     h1{font-size:12px;
       color:#930;
-      text-align:center;}
+      text-align:center;
+       }
     </style>
   </head>
   <body>
       <h1>Hello World</h1>
-      <p><em>I'm</em> <span>hosted</span> with <strong>GitHub Pages</strong>.</p>
+      <p><q>"I'm hosted with GitHub Pages."</q></p>
       <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
   </body>
 </html>
