--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <h1>Hello World</h1>
-      <p><q>"I'm hosted with GitHub Pages."</q></p>
+      <p><q>I'm hosted with GitHub Pages.</q></p>
       <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
   </body>
 </html>
