--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Hello World</h1>
       <p>"I'm hosted with GitHub Pages."</p>
       <q>Ehh...I'm speechless...</q>
-      <em>Am I look strange?</em>
+      <em><p>Am I look strange?</em></p>
       <blockquote>okay,all things come to common.</blockquote>
       <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
   </body>
