--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>"I'm hosted with GitHub Pages."</p>
       <q>Ehh...I'm speechless...</q>
       <em><p>Am I look strange?</em></p>
-      <blockquote>okay,all things come to common.</blockquote>
+      <blockquote>okay,all<br /> things<br /> come to<br /> common.</blockquote>
       <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
   </body>
 </html>
