--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   </head>
   <body>
       <h1>Hello World</h1>
-      <p>"I'm hosted with GitHub Pages."</p>
+      <p>I'm hosted with GitHub Pages.</p>
       <q>Ehh...I'm speechless...</q>
       <em><p>Am I look strange?</em></p>
       <blockquote>okay,all<br> things<br> come to<br> c&nbsp;o&nbsp;&nbsp;m&nbsp;&nbsp;&nbsp;mon.</blockquote>
       <hr> 
-      <adrress>Earthalskdnowdalkdiao</adrress>
+      <adrress>Earth   
+      alskdnowdalkdiao</adrress>
       <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
   </body>
 </html>
