--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       <q>Ehh...I'm speechless...</q>
       <em><p>Am I look strange?</em></p>
       <blockquote>okay,all<br> things<br> come to<br> c&nbsp;o&nbsp;&nbsp;m&nbsp;&nbsp;&nbsp;mon.</blockquote>
-      <hr> <pre>{backgroudimage;}
-      {linear-gradient:}</pre>
+      <hr> 
+      <pre>
+        {backgroudimage;}
+        {linear-gradient:}
+      </pre>
       <adrress>Earth alskdnowdalkdiao</adrress>
       <img src="http://dm.tsdm.net/images/2016_1/1/16.jpg">
   </body>
