--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <em><p>Am I look strange?</em></p>
       <blockquote>okay,all<br> things<br> come to<br> c&nbsp;o&nbsp;&nbsp;m&nbsp;&nbsp;&nbsp;mon.</blockquote>
       <hr> 
-      <pre>
-        {backgroudimage;}
+      <pre>{backgroudimage;}
         {linear-gradient:}
       </pre>
       <adrress>Earth alskdnowdalkdiao</adrress>
