--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
       <h1>Hello World</h1>
       <p>I'm hosted with GitHub Pages.</p>
-      <q>Ehh...I'm speechless...</q>
+      Ehh...I'm speechless...
       <em><p>Am I look strange?</em></p>
       <blockquote>okay,all<br> things<br> come to<br> c&nbsp;o&nbsp;&nbsp;m&nbsp;&nbsp;&nbsp;mon.</blockquote>
       <hr> 
