--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
        }
     </style>
   </head>
+  
   <body>
       <h1>Hello World</h1>
       <p>I'm hosted with GitHub Pages.</p>
       Ehh...I'm speechless...
-      <em><p>Am I look strange?</em></p>
+      <p><em>Am I look strange?</em></p>
       <blockquote>okay,all<br> things<br> come to<br> c&nbsp;o&nbsp;&nbsp;m&nbsp;&nbsp;&nbsp;mon.</blockquote>
       <hr> 
       <pre>{backgroudimage;}
